<resources>

    <string name="app_name">DiplomaNotepad</string>

    <string name="add_label">Добавить</string>
    <string name="save_label">Сохранить</string>

    <string name="settingsLabel">Настройки</string>

    <string name="titlePlaceholder">Заголовок</string>
    <string name="textPlaceholder">Заметка</string>
    <string name="pinPlaceholder">Введите новый PIN-код</string>
    <string name="hasDeadLineLabel">Задача со сроками</string>
    <string name="deadLinePlaceholder">Срок выполнения задачи</string>

    <string name="deleteNoteConfirmation">Удалить заметку?</string>

    <string name="yes">Да</string>
    <string name="no">Нет</string>

    <string name="enterPinLabel">Введите PIN-код:</string>

    <string name="number1">1</string>
    <string name="number2">2</string>
    <string name="number3">3</string>
    <string name="number4">4</string>
    <string name="number5">5</string>
    <string name="number6">6</string>
    <string name="number7">7</string>
    <string name="number8">8</string>
    <string name="number9">9</string>
    <string name="number0">0</string>

    <string name="clearPlaceholder">C</string>
    <string name="incorrectPinMessage">Неверный PIN-код</string>
    <string name="minPingLengthMessage">Минимальная длина PIN-кода: 4 цифры</string>

    <string name="savingErrorMessage">При сохранении заметки произошла ошибка</string>
    <string name="emptyNoteErrorMessage">Заметка не может быть пустой</string>

    <string name="dateFormat">dd.MM.yyyy</string>

    <string name="createPinLabel">Создать PIN-код</string>
    <string name="editPinLabel">Изменить PIN-код</string>

</resources>