<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PinActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/enterPinLabel"
            android:textAlignment="center" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:gravity="center"
            android:orientation="horizontal">

            <View android:id="@+id/pin_item_1" style="@style/PinItem" />
            <View android:id="@+id/pin_item_2" style="@style/PinItem" />
            <View android:id="@+id/pin_item_3" style="@style/PinItem" />
            <View android:id="@+id/pin_item_4" style="@style/PinItem" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:onClick="onNumberButtonClick"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number1" />

            <Button
                android:onClick="onNumberButtonClick"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number2" />

            <Button
                android:onClick="onNumberButtonClick"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number3" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:onClick="onNumberButtonClick"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number4" />

            <Button
                android:onClick="onNumberButtonClick"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number5" />

            <Button
                android:onClick="onNumberButtonClick"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number6" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:onClick="onNumberButtonClick"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number7" />

            <Button
                android:onClick="onNumberButtonClick"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number8" />

            <Button
                android:onClick="onNumberButtonClick"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number9" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:onClick="onNumberButtonClick"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number0" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/clearPlaceholder" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>